# git-scripts

./: Makefile  README-git-series-gitlab-import.md  README-git-show-loose.md  README.md  git-absolve  git-cache  git-format-series  git-head  git-nice-branch  git-nice-log  git-series-gitlab-import  git-series-review  git-show-large  git-show-loose  git-wip
git-absolve/: README.md
git-discuss/: git-discuss.cabal
git-discuss/git-discuss/: Main.hs  README.md
git-discuss/git-review/: Main.hs  README.md
git-discuss/git-review/Git/Review/: Routes.hs  Stylesheet.hs  Views.hs
git-discuss/src/Data/: HashTree.hs
git-discuss/src/Git/: Diffstat.hs  Notes.hs  Series.hs  Shortlog.hs  Util.hs
git-discuss/src/Git/Discuss/: Backend.hs  Topic.hs
git-series-gitlab-import/: git-series-gitlab-import
